# jengine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: block_components.rs  config_parse.rs  cpu_primitives.rs  end_to_end_reference.rs  packed_io.rs  packed_matvec.rs  repack_ops.rs  safetensors_scan.rs  tokenizer_ops.rs
docs/: AUTOMATION_WORKFLOWS.md  BACKEND_REASSESSMENT.md  BASELINES.md  BENCHMARK_CAPTURE_FORMAT.md  BONSAI_1_7B.md  GPU_FIRST_REDESIGN_PLAN.md  PACKED_DECODE_BANDWIDTH.md  PACKED_RUNTIME_ARCHITECTURE.md  PACKED_RUNTIME_POLICY.md  PACKED_SHORT_CONTEXT_TARGETS.md  PERFORMANCE_TARGETS.md  PERSISTENT_GPU_FIRST_PACKED_DECODE.md  PLAN.md  QUALITY_GATES.md  RELEASE_BENCHMARK_WORKFLOW.md  STATUS.md  TERNARY_REPACK_PLAN.md  TOKENIZER_FALLBACK.md  VULKAN_PLAN.md
fixtures/: bonsai_1_7b_config.json  bonsai_1_7b_generation_config.json  bonsai_1_7b_tokenizer_config.json  prompt_regression.txt  release_benchmark.env
scripts/: bench.sh  capture_release_baselines.sh  check.sh  chunked_packed_upper_bound.py  compare_gpu_first_matrices.sh  compare_packed_profile_hotspots.py  doctor.sh  profile_cpu.sh  profile_gpu_first_matrix.sh  profile_gpu_first_matrix_with_hotspots.sh  profile_release_local.sh  quick_ci.sh  run_regression.sh  summarize_packed_profile_hotspots.py  validate_shaders.sh
shaders/: argmax_reduce.comp  argmax_reduce_pairs.comp  attention_single_query.comp  embedding_lookup_f16.comp  fp16_matvec.comp  pack_f16_pairs.comp  packed_ternary_matvec.comp  packed_ternary_matvec_argmax_xe2_subgroup_row.comp  packed_ternary_matvec_f32_input.comp  packed_ternary_matvec_xe2_32.comp  packed_ternary_matvec_xe2_subgroup_row.comp  packed_ternary_pair_swiglu_pack.comp  qk_norm_rope.comp  swiglu.comp  swiglu_combined_input.comp  swiglu_pack_f16_pairs.comp  vector_add.comp  (+1 more)
(+48 files in other folders)
