[package]
name = "jengine"
version = "0.1.0"
edition = "2024"
description = "A Rust inference runtime for compact LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1jehuang/jengine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "config_parse"
harness = false
