[package]
name = "jengine"
version = "0.1.0"
edition = "2024"
description = "A Rust inference runtime for compact LLMs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/1jehuang/jengine"

[dependencies]
half = "2"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
safetensors = "0.4"
tokenizers = "0.19"

[dev-dependencies]
bytemuck = "1"
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "config_parse"
harness = false

[[bench]]
name = "safetensors_scan"
harness = false

[[bench]]
name = "tokenizer_ops"
harness = false

[[bench]]
name = "cpu_primitives"
harness = false

[[bench]]
name = "block_components"
harness = false

[[bench]]
name = "end_to_end_reference"
harness = false
